--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/dg-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe with React & Typescript</title>
+    <title>Tic Tac Toe with React & Typescript!</title>
   </head>
   <body>
     <div id="root"></div>
